--- a/thesis.tex
+++ b/thesis.tex
@@ -175,8 +175,8 @@ An evaluation with the development team confirmed the dashboard's significant va
 % --  --  --  --  --  --  --  --  --  --  --  --  --  --  --  --  --  --  --  --  --  --  -- %
 % --  --  --  --  --  --  -- -- List of Abbreviations  --  --  --  --  --  --  -- --%
 % --  --  --  --  --  --  --  --  --  --  --  --  --  --  --  --  --  --  --  --  --  --  -- %
-\chapter*{Abkürzungsverzeichnis}
-\addcontentsline{toc}{chapter}{Abkürzungsverzeichnis}           %Kapitel bekommt keine Nummerierung und wird trotzdem
+\chapter*{List of abbreviations}
+\addcontentsline{toc}{chapter}{List of abbreviations}           %Kapitel bekommt keine Nummerierung und wird trotzdem
                                                                 %ins Inhaltsverzeichnis aufgenommen
 
 \begin{xtabular}{ll}
@@ -210,14 +210,14 @@ This thesis addresses this management challenge directly. It documents the desig
 \chapter{Theoretical Background}
 In order to gain a deeper understanding of what determines the success of an enterprise Gen-AI system, we will first look at the success of IS in general. Afterwards, we will dive deeper into the context of KMS - specifically enterprise GenAI systems and apply the more general theories to them. This will help us define and categorize the software features we are going to implement during our artifact development.
 \section{Technology acceptance and IS success}
-To better understand the success of IS we will have a look at two models. The technology acceptance model (TAM) deals with the question, which determinants lead to the acceptance and use of an IS by a single user, whereas the IS success model \parencite{DeloneMcLean2003ISSuccessTenYearUpdate} focuses on the success of an IS in an organizational context.
+To better understand the success of IS we will have a look at two models. The technology acceptance model (TAM) \parencite{Davis1989} deals with the question, which determinants lead to the acceptance and use of an IS by a single user, whereas the IS success model \parencite{DeloneMcLean2003ISSuccessTenYearUpdate} focuses on the success of an IS in an organizational context.
 \begin{figure}[h!]
     \includegraphics[width=1\linewidth]{images/TAM.png}
     \caption{Technology acceptance model}
     \label{fig:enter-label}
 \end{figure}
 \\
-Looking at the TAM there are two determinants that influence the use of an IS - the \textit{perceived usefulness} (PU) and the \textit{perceived ease of use} (PEU). Both are influenced by external variables. The PU describes the degree to which a person believes that using a particular system would provide some use for her or him \parencite{Davis1989MISQ}. In an enterprise context this usually means the conviction that the use of the IS has a beneficial influence on the own job performance. The second determinant, the \textit{perceived ease of use} (PEU), refers to "the degree to which a person believes that using a particular system would be free of effort" \parencite[p.~320]{Davis1989MISQ}. This idea relates to the user's estimation of the mental effort required to learn and operate the system. If a system is intuitive, straightforward and does not require extensive training to use, it will be perceived as easy to use.\\ A crucial aspect of the TAM is the relationship between these two determinants. Davis argues that the PEU has a direct, positive influence on the PU. A system that is easier to use is also perceived as more useful, partly because the user can invest less effort in the mechanics of using the system and more in the actual task at hand. Both PU and PEU then influence the user's \textit{attitude toward using} the system, which in turn shapes the \textit{behavioral intention to use} and ultimately leads to the \textit{actual system use}. However, it is important to note that a consistent finding in TAM research is that PU has a significantly stronger influence on usage intention and actual use than PEU \parencite{Davis1989MISQ}. While ease of use is important, the ultimate driver for acceptance is the user's belief that the system will help them perform their job better.\\
+Looking at the TAM two determinants influence the use of an IS - the \textit{perceived usefulness} (PU) and the \textit{perceived ease of use} (PEU) \parencite{Davis1989}. Both are influenced by external variables \parencite{Davis1989}. The PU describes the degree to which a person believes that using a particular system would be beneficial to them \parencite{Davis1989}. In an enterprise context this usually means the conviction that the use of the IS has a beneficial influence on the own job performance. The second determinant, the \textit{perceived ease of use} (PEU), refers to "the degree to which a person believes that using a particular system would be free of effort" \parencite[p.~320]{Davis1989}. This idea relates to the user's estimation of the mental effort required to learn and operate the system. If a system is intuitive, straightforward and does not require extensive training to use, it will be perceived as easy to use.\\ A crucial aspect of the TAM is the relationship between these two determinants. Davis argues that the PEU has a direct, positive influence on the PU. A system that is easier to use is also perceived as more useful, partly because the user can invest less effort in the mechanics of using the system and more in the actual task at hand. Both PU and PEU then influence the user's \textit{attitude toward using} the system, which in turn shapes the \textit{behavioral intention to use} and ultimately leads to the \textit{actual system use}. However, it is important to note that a consistent finding in TAM research is that PU has a significantly stronger influence on usage intention and actual use than PEU \parencite{Davis1989}. While ease of use is important, the ultimate driver for acceptance is the user's belief that the system will help them perform their job better.\\
 \\
 Now that we know which factors lead to the use of an IS by a single person, we will shift our perspective to the factors that determine its use and overall success within an organizational context.
 Following DeLone and McLean \parencite{DeloneMcLean2003ISSuccessTenYearUpdate} there are 6 interrelated factors that determine the success of an IS in an organizational context: \textit{system quality, information quality, service quality, intention to use and actual system use, user satisfaction and the net benefits} of the IS.\\
@@ -233,19 +233,19 @@ Following DeLone and McLean \parencite{DeloneMcLean2003ISSuccessTenYearUpdate} t
 \\
 These three aspects of the quality of an information system directly influence the \textit{intention to use} and the actual \textit{system use} as well as the \textit{user satisfaction}. Here, it is important to differentiate between the two concepts of use. \textit{Intention to use} is an attitudinal measure, representing a user's plan to engage with a system. In contrast, \textit{system use} is a behavioral measure of the actual interaction, captured by metrics like frequency, duration, or the breadth of features used. This distinction is particularly crucial in an enterprise context. For a system where use is voluntary, a user's intention is a strong predictor of their actual use. However, if a system's use is mandatory, simply measuring that it is being used is not very meaningful, because the system has to be used anyway. In that scenario, assessing the nature of the use (e.g., are users leveraging advanced features?) or their underlying intention to use the system properly becomes a more telling indicator of true acceptance and success
 \parencite{DeloneMcLean2003ISSuccessTenYearUpdate}. Both use and intention are linked with \textit{user satisfaction}. A positive experience during system use leads to higher satisfaction, which in turn reinforces the intention for continued and more extensive use in the future. In an organizational context, this user satisfaction is heavily influenced by the system's perceived impact on job performance, such as an increase in productivity. Therefore, the combination of active system use and high user satisfaction is what generates \textit{net benefits}.\\
-This process, however, is not a one-way street. The model includes a crucial feedback loop: the \textit{net benefits} that users perceive will in turn influence their future \textit{user satisfaction} and \textit{intention to use}. When users see that a system is delivering real value, it reinforces their positive attitude towards the system. This creates a virtuous cycle, where a successful system's value is constantly reinforced and grown over time.\\
+This process, however, is not a one-way street. The model includes a crucial feedback loop: the \textit{net benefits} that users perceive will in turn influence their future \textit{user satisfaction} and \textit{intention to use}. When users see that a system is delivering real value, it reinforces their positive attitude towards the system. This creates a virtuous cycle, where a successful system's value is constantly reinforced and grows over time.\\
 
 The Technology Acceptance Model (TAM) and the Information Systems Success Model (ISSM) address the same fundamental questions but from two different perspectives. The TAM focuses on the individual user, suggesting that a person will use a system more often if it provides value (\textit{perceived usefulness}) and is easy to operate (\textit{perceived ease of use}).
-The ISSM, on the other hand, argues from a company's perspective. It concludes that three quality dimensions influence system success: \textit{information quality}, \textit{system quality}, and \textit{service quality}. These dimensions impact both \textit{user satisfaction} and \textit{ intention to use}, which drives \textit{actual system use}.
-Drawing parallels between the models, we can associate the ISSM's specific quality dimensions with the more general \textit{external variables} of the TAM. Similarly, \textit{user satisfaction} in the ISSM is analogous to the concepts of \textit{perceived usefulness} and \textit{perceived ease of use} in the TAM. This connection between the two models is significant. It implies that by measuring the success of the RAG application on a small scale (e.g., through individual user interactions, as in TAM), we can draw valid conclusions about its overall success (as defined by ISSM), since the core concepts of user acceptance and satisfaction are parallel in both models.
+The ISSM, on the other hand, argues from a company's perspective. It concludes that three quality dimensions influence system success: \textit{information quality}, \textit{system quality}, and \textit{service quality}. These dimensions impact both \textit{user satisfaction} and \textit{ intention to use}, which drives \textit{actual system use}. Overall, the two models appear to be quite parallel to each other as both implement factors like how simple a system is to use and how beneficial the use is.
 
-For this thesis, the ISSM provides a more practical framework. It offers specific, measurable dimensions rather than the TAM's general concept of \textit{external variables}. Therefore, we will use the ISSM to develop and categorize the quality measurements for the RAG application.
+For this thesis, the ISSM provides a more practical framework. It offers specific, measurable dimensions rather than the TAM's general concept of \textit{external variables} and argues from a company's perspective. Therefore, we will use the ISSM to develop and categorize the quality measurements for the RAG application.
 
 \newpage
 \section{Knowledge Management System's success}
-Now that we have a solid understanding of IS acceptance and success in general we are going to have a closer look at knowledge management systems (KMS). We'll start of with some definitions that will help us understand what knowledge, knowledge management (KM) and knowledge management systems (KMS) are. "Knowledge is an evolving mix of framed experience, values, contextual information, and expert insight that provides a framework for evaluating and incorporating new experiences and information". This means that knowledge is a key key factor in the decision-making processes e.g. in enterprises. KM on the other hand "is the practice of selectively applying knowledge from previous experiences of decision making to current and future decision making activities with the express purpose of improving the organization’s effectiveness". KMS in the end can be defined as "IT-based systems developed to support and enhance the organizational processes of knowledge creation, storage/retrieval, transfer and application". Overall we can conclude that KMS are systems that support the decision-making process e.g. in a company by managing and selectively providing knowledge to their users. Since KMS are by definition a specialized form of IS we can simply apply the ISSM to them.\\
+Now that we have a solid understanding of IS acceptance and success in general we are going to have a closer look at knowledge management systems (KMS). We'll start of with some definitions that will help us understand what knowledge, knowledge management (KM) and knowledge management systems (KMS) are. "Knowledge is a fluid mix of framed experience, values, contextual information, and expert insight that provides a framework for
+evaluating and incorporating new experiences and information" \parencite[p.~15]{Davenport}. This means that knowledge is a key factor in decision-making processes, e.g., in enterprises. KM on the other hand "[...] is the practice of selectively applying knowledge from previous experiences of decision making to current and future decision making activities with the express purpose of improving the organization’s effectiveness" \parencite{Jennex2006WhatIsKM}. KMS in the end can be defined as "IT-based systems developed to support and enhance the organizational processes of knowledge creation, storage/retrieval, transfer and application". Overall, we can conclude that KMS are systems that support the decision-making process e.g. in a company by managing and selectively providing knowledge to their users. Since KMS are by definition a specialized form of IS we can simply apply the ISSM to them.\\
 Following Jennex and Olfman we can extend the three quality factors to gain a better understanding
-of knowledge management success.\\
+of knowledge management success \parencite{Jennex2006}.\\
 \begin{figure}
     \centering
     \includegraphics[width=1\linewidth]{knowledge_management_success.png}
@@ -255,21 +255,21 @@ of knowledge management success.\\
 The \textit{System Quality} dimension extends to contain the \textit{technological resources}, \textit{KM form} and the \textit{KM level}. \textit{Technological resources} define the capability of an organization to develop, operate, and maintain KM. This includes all kinds of technical conditions like the amount of experience available to develop, operate and maintain the KM, the underlying network infrastructure or the databases to hold the data use in KM. The \textit{KM form} refers to the extent to which knowledge and knowledge management processes are computerized and integrated. This is important since computerized KM processes are more effective than analogue ones as they make knowledge accessible everywhere at any time through a simple to use interface. The \textit{KM level} in the end refers to the ability to influence current activities. \textit{Technological resources} and the \textit{KM form} are both enablers for the \textit{KM level} and serve as a technical foundation for the ability of the KMS to influence the decision-making process.\\\\
 The \textit{Knowledge Quality· dimension} consists of three subsidiary factors too - the \textit{KM strategy/process}, the \textit{Richness} of the captured knowledge and the \textit{Linkages} among the knowledge components. The \textit{Knowledge strategy/process} factor is the basis for the two other factors and means looks at the organizational processes organizing the knowledge management and to which extend these processes are formalized. \textit{Richness} on the other hand evaluates the accuracy and timeliness of the knowledge itself - one could say it is the quality of the actual knowledge. Linkages refer to how accessible the knowledge is through things like knowledge and topic maps etc.\\\\
 The \textit{service quality} dimension determines if users of the KMS are provided with sufficient support to use the KMS effectively. It consists of three parts aswell. The \textit{management support} refers to the provision of adequate resources for the KM the organization aswell as the creation of knowledge-sharing organization culture by the organization's management. User KM service quality refers to the support provided by the user organization in order to train the users to use the KMS effectively. On the other hand the IS KM service quality refers to the support provided by the  IS organization to allow users to use the KM aswell as maintaining it. This includes the building, setup and maintaining the KM infrastructure ensuring availability, reliability and security of the KMS provided.\\\\
-All three dimensions - the \textit{system quality}, \textit{knowledge quality} and the \textit{service quality} influence similar to the original ISSS the \textit{Intention to use and usage} aswell as the \textit{User Satisfaction} and cause a \textit{net benefit} in the end.
+All three dimensions - the \textit{system quality}, \textit{knowledge quality} and the \textit{service quality} influence similar to the original ISSS the \textit{Intention to use} as well as the \textit{User Satisfaction} and cause a \textit{net benefit} in the end. The KMS success model makes a small difference by replacing the actual usage with \textit{perceived benefit} to highlight the importance of the distinction between mandatory and voluntary use.
 \section{Generative AI Systems in organizations}
 Since we now know what determines the success of KMS in organizations like enterprises, we are going to have a closer look at the GenAI systems that are used to support KM in an organization, find out what they are used for and which factors define their quality.\\
-AI in general is hard to define. For now we will follow the definition by Marvin Minsky and define Artificial Intelligence as "the science of making machines do things that would require intelligence if done by men." In other words, AI systems are systems that show some form of intelligent behavior similar to human intelligence. Machine learning (ML) is a subfield of AI and describes the analysis of huge amounts of data. Neural networks are models used in ML to perform this analysis. They imitate the human brain by using interconnected layers of artificial neurons (or nodes) to process information. Generative AI (GenAI) is one kind of ML model approach that uses a neural network with a vast number of layers to generate new data based on training data.
-Large Language Models are one flavor of GenAI models. These models are trained on huge corpora of text and are capable of many text-processing tasks. The workflow using these LLMs is: A user submits a request -- a so-called prompt -- to the LLM, and the LLM generates a response based on its training data and the prompt.\\
-The GenAI system we will focus on throughout this thesis is a retrieval-augmented generation (RAG) system. These systems utilize external data sources like web pages, other organizational KMS, or third-party sources through retrieval algorithms. The retrieved context is then passed alongside the user's query to a large language model (LLM) that generates an answer grounded on the retrieved knowledge. Such RAG systems can be used for knowledge retrieval as they make (proprietary) knowledge available to an LLM.\\
+AI in general is hard to define. For now we will follow the definition by Marvin Minsky and define Artificial Intelligence as "the science of making machines do things that would require intelligence if done by men" \parencite{MinskyBritannica}. In other words, AI systems are systems that show some form of intelligent behavior similar to human intelligence. Machine learning (ML) is a subfield of AI and describes the analysis of huge amounts of data \parencite{Lund2023}. Neural networks are models used in ML to perform this analysis. They imitate the human brain by using interconnected layers of artificial neurons (or nodes) to process information \parencite{Lund2023}. Generative AI (GenAI) is one kind of ML model approach that uses a neural network with a vast number of layers to generate new data based on training data \parencite{Lund2023}.
+Large Language Models are one flavor of GenAI models. These models are trained on huge corpora of text and are capable of many text-processing tasks. The workflow using these LLMs is as follows: A user submits a request, known as a prompt, to the LLM, and the LLM generates a response based on its training data and the prompt \parencite{Lund2023}.\\
+The GenAI system we will focus on throughout this thesis is a retrieval-augmented generation (RAG) system. These systems utilize external data sources like web pages, other organizational KMS, or third-party sources through retrieval algorithms \parencite{AWS_RAG}. The retrieved context is then passed alongside the user's query to a large language model (LLM) that generates an answer grounded on the retrieved knowledge. Such RAG systems can be used for open-domain question answering and can be used for knowledge work in an organization as they make (proprietary) knowledge available to an LLM \parencite{Lewis2021}.\\
 \subsection{Advantages of RAG systems for organizational KM}
 One problem of LLMs that do not use RAG is that they can only provide the data they were trained on. This causes them to become outdated. As we know from the KMS success model, an organization must be able to access up-to-date information using their KMS. RAG systems can provide this by utilizing up-to-date knowledge sources for their generation.\\
 Another issue with LLMs is that they tend to hallucinate if they don't know the answer to a user's query or apply a pattern from the training data incorrectly. Since RAG systems bind the LLMs they use to the information provided by the retrieval algorithms, they reduce hallucinations, allowing a user to verify the answer provided by the LLM by double-checking the sources used by the RAG system. This way, the RAG approach improves the accuracy of LLMs.\\
 Since RAG systems can query various data sources at once, they provide good linkages to other KMS as well. Following the KM- and IS success model, RAG systems seem like a pretty good choice when it comes to KM. \\
 \subsection{Challenges for RAG systems in organizations}
 However, realizing the full potential of RAG systems in an enterprise context requires significant effort. Enterprises typically have high requirements concerning not only the output quality but also compliance regulations, the integration of various data sources, and other factors. In the following analysis, we will examine some of the issues encountered in RAG systems used in enterprises and assign them to the quality dimensions of the ISSM. \\
-A formal taxonomy of failure points for a RAG system, created based on three case studies, highlights seven distinct issue types related to \textit{Information quality}. These challenges range from fundamental data gaps, where the required information is simply missing from the knowledge base, to retrieval failures where required documents are not ranked highly enough by the retrieval algorithm or are lost during context consolidation. Further down the pipeline, the Large Language Model (LLM) might fail to extract the correct answer from the provided context. Finally, even if factually correct, the generated answer may have the wrong format, an incorrect level of specificity, or be incomplete, failing to satisfy the user's query fully.\\
-Three other case studies demonstrate these theoretical \textit{Information quality} related issues in the real world too. In a 2023 case study from the \textit{Journal of Medical Internet Research}, a RAG system implemented in a major healthcare organization began to produce a series of potentially harmful treatment suggestions that contradicted current medical standards. This occurred because its knowledge base contained outdated medical guidelines, inconsistent drug interaction databases, and incomplete patient history records. This case highlighted the direct risks to patient safety. In another example, an investment firm's RAG system produced contradictory advice on securities regulations, leading to potential compliance violations. An investigation found the knowledge base contained regulatory documents from multiple jurisdictions without proper geographic tagging, superseded regulations that had not been archived, and inconsistent interpretations of the same rule. The firm faced potential regulatory scrutiny and had to suspend the system, resulting in millions of dollars in lost productivity and manual oversight. Similarly, a telecommunications chatbot began providing customers with incorrect billing information and outdated service plans. The root cause was traced to duplicate customer records, outdated product catalogs with discontinued services, and inconsistent pricing data across regional databases.\\
-Another study highlights five key challenges that RAG systems face, especially in compliance-regulated enterprise environments.\\
+A formal taxonomy of failure points for a RAG system, created based on three case studies, highlights seven distinct issue types related to \textit{Information quality} \parencite{Barnett_Kurniawan_Thudumu_Brannelly_Abdelrazek_2024}. These challenges range from fundamental data gaps, where the required information is simply missing from the knowledge base, to retrieval failures where required documents are not ranked highly enough by the retrieval algorithm or are lost during context consolidation. Further down the pipeline, the Large Language Model (LLM) might fail to extract the correct answer from the provided context. Finally, even if factually correct, the generated answer may have the wrong format, an incorrect level of specificity, or be incomplete, failing to fully satisfy the user's query \parencite{Barnett_Kurniawan_Thudumu_Brannelly_Abdelrazek_2024}.\\
+Three other case studies demonstrate these theoretical \textit{Information quality} related issues in the real world too. In a 2023 case study, a RAG system implemented in a major healthcare organization began to produce a series of potentially harmful treatment suggestions that contradicted current medical standards. This occurred because its knowledge base contained outdated medical guidelines, inconsistent drug interaction databases, and incomplete patient history records \parencite{NStarX_Inc._2025}. This case highlighted the direct risks to patient safety. In another example, an investment firm's RAG system provided contradictory advice on securities regulations, potentially leading to compliance violations. An investigation found the knowledge base contained regulatory documents from multiple jurisdictions without proper geographic tagging, superseded regulations that had not been archived, and inconsistent interpretations of the same rule. The firm faced potential regulatory scrutiny and was forced to suspend the system, resulting in millions of dollars in lost productivity and increased manual oversight \parencite{NStarX_Inc._2025}. Similarly, a telecommunications chatbot began providing customers with incorrect billing information and outdated service plans. The root cause was traced to duplicate customer records, outdated product catalogs with discontinued services, and inconsistent pricing data across regional databases. \parencite{NStarX_Inc._2025}\\
+Another study highlights five key challenges that RAG systems face, especially in compliance-regulated enterprise environments \parencite{Tilmann}.\\
 The first of these is maintaining accuracy, consistency, and explainability. Given that RAG outputs in sectors such as finance or healthcare can carry legal or financial weight, they require a higher level of trustworthiness and accuracy. Furthermore, the systems must be able to explain how retrieved documents influence the final generated content and provide confidence scores to help users assess the reliability of the output.\\
 Secondly, data security, privacy, and compliance are critical. Enterprises must ensure their RAG systems comply with strict regulations, such as HIPAA or GDPR, which require robust data encryption, access controls, and detailed audit trails to prevent the unauthorized disclosure of sensitive information.\\
 A third significant \textit{system quality}-related challenge is the \textbf{scalability and performance} of the RAG application. Enterprise knowledge bases are typically vast and complex, spanning numerous formats and systems. RAG architectures must be able to efficiently index, update, and search these massive data sources while maintaining high performance and low latency.\\
@@ -278,22 +278,22 @@ Lastly, customization and domain adaptation are crucial for achieving high accur
 The study concludes that RAG systems need to be purpose-built, as general-purpose RAG systems cannot adequately handle these challenges.\\
 In conclusion, while RAG systems offer immense potential for enhancing an organization's knowledge management, considerable effort is required to realize this potential. Since the issues affect all three quality dimensions of the ISSM, an ideal evaluation framework should provide evaluation features that concern all three of them.
 \section{Evaluation and analytics frameworks}
-Several frameworks already exist for evaluating the \textit{information quality} of a RAG system. A prominent open-source example is the RAGAS evaluation framework, which in its original version uses an "LLM as a judge" approach to determine quality metrics. Here, \textit{Answer Relevance} assesses if the answer fits the question, \textit{Faithfulness} evaluates if the retrieved documents support the answer, and \textit{Context Relevance} measures if the retrieved documents are relevant to the question. The framework has since been expanded to include a broader range of metrics, including some that are not model-based; however, a complete list is beyond the scope of this section. Other open-source solutions, such as SCARF and ARES, also rely on LLM-based evaluation models.
+Several frameworks already exist for evaluating the \textit{information quality} of a RAG system. A prominent open-source example is the RAGAS evaluation framework, which in its original version uses an "LLM as a judge" approach to determine quality metrics \parencite{Es_James_Espinosa_Anke_Schockaert_2024}. Here, \textit{Answer Relevance} assesses if the answer fits the question, \textit{Faithfulness} evaluates if the retrieved documents support the answer, and \textit{Context Relevance} measures if the retrieved documents are relevant to the question. The framework has since been expanded to include a broader range of metrics, including some that are not model-based; however, a complete list is beyond the scope of this section. Other open-source solutions, such as ARES \parencite{Saad_Falcon_Khattab_Potts_Zaharia_2024}, also rely on LLM-based evaluation models.
 
-Proprietary services also exist, such as Google's Gen AI Evaluation Service available on GCP, which uses a mix of LLM-based and computation-based metrics to assess RAG system quality. This shows that using an LLM to evaluate RAG quality is a common and established practice, an approach that is also adopted in the evaluation dashboard developed in this thesis.
+Proprietary services also exist, such as Google's Gen AI Evaluation Service available on GCP, which uses a mix of LLM-based and computation-based metrics to assess RAG system quality \parencite{GoogleGenAIEvaluation}. This shows that using an LLM to evaluate RAG quality is a common and established practice, an approach that is also adopted in the evaluation dashboard developed in this thesis.
 
-However, the frameworks mentioned above focus exclusively on RAG quality, which corresponds solely to the \textit{Information Quality} dimension of the IS Success Model. This thesis aims to cover the other quality dimensions as well. Existing systems often achieve a broader analysis through the integration of general analytic tools, like Google Analytics. Such tools make it possible to track detailed user interactions to get a more comprehensive picture of system usage. For instance, \textit{System Quality} can be assessed by measuring end-to-end page load times or tracking client-side errors to gauge performance and reliability. \textit{Service Quality} can be analyzed by tracking feature usage and monitoring engagement with advanced features to understand how users interact with a system.
+However, the frameworks mentioned above focus exclusively on RAG quality, which corresponds solely to the \textit{Information Quality} dimension of the IS Success Model. This thesis aims to cover the other quality dimensions as well. Existing systems often achieve a broader analysis through the integration of general analytic tools, e.g., Google Analytics \parencite{GoogleAnalytics}. Such tools enable the tracking of detailed user interactions, providing a more comprehensive picture of system usage. For instance, \textit{System Quality} can be assessed by measuring end-to-end page load times or tracking client-side errors to gauge performance and reliability. \textit{Service Quality} can be analyzed by tracking feature usage and monitoring engagement with advanced features to understand how users interact with a system.
 
 The goal of this thesis, therefore, is to develop a dashboard that combines both approaches. It aims to move beyond a narrow focus on RAG-specific \textit{Information Quality} to provide a foundation for a holistic analysis of all quality dimensions of the ISSM.
 % --  --  --  --  --  --  --  --  --  --  --  --  --  --  --  --  --  --  --  --  --  --  -- %
 % --  --  --  --  --  --  --  --  --  --  Methodology  --  --  --  --  --  --  --  -- --%
 % --  --  --  --  --  --  --  --  --  --  --  --  --  --  --  --  --  --  --  --  --  --  -- %
 \chapter{Methodology}
-The research methodology is based on the DSR approach, which involves the definition, development and evaluation of artifacts in iterative cycles. DSR aims to develop innovative solutions for specific problems and to test these solutions in real-world contexts (Peffers et al., 2007b, p. 4).\\
+The research methodology is based on the DSR approach, which involves the definition, development and evaluation of artifacts in iterative cycles. DSR aims to develop innovative solutions for specific problems and to test these solutions in real-world contexts \parencite{Peffers2007}.\\
 \subsection{Problem Identification and Motivation}
 In the first phase of the DSR approach, the need for support in evaluating the RAG system using a holistic approach following the ISSM was identified. It was determined that system administrators require insights that enable them to better assess the current performance and quality of the RAG application and draw conclusions about the measures that must be taken to improve it. Examples of such measures include employee training, enhancing the knowledge base, or improving the RAG mechanism itself.
 \section{First iteration - Definition of valuable insights}
-In the first iteration, specific software features were defined to support system administrators in managing the system. This was done in collaboration with the developers of the RAG software under investigation during several joint workshops.
+In the first iteration, specific software features were defined to support system administrators in managing the system. This was done in collaboration with the developers of the investigated RAG software during several joint workshops.
 \subsection{Define Objectives of Artifacts}
 In a first workshop, initial ideas for evaluating the RAG application were collected, and its current data situation was analyzed to determine what additional data must be gathered to implement the automated analysis. The developers were presented with the foundational principles of Information Systems Success (ISSS) and Knowledge Management Systems (KMS) success. They then developed ideas related to both topics in small groups and afterwards discussed their findings in a plenary session. Through this process, the objectives for the evaluation of the RAG system were clearly established
 \subsection{Development of Artifacts}
@@ -317,7 +317,7 @@ In the following chapter, we are going to elaborate on the concepts for software
 To provide a basis for further investigation, this section describes the features of the Retrieval-Augmented Generation (RAG) system under examination. The system is designed for enterprise use, making company-specific knowledge accessible to employees through a conversational interface powered by LLMs.
 
 \subsection{System Architecture and Technology Stack}
-The system is deployed on the Google Cloud Platform (GCP) and utilizes Vertex AI Search for the initial document retrieval from its knowledge base. The relevance of the retrieved documents is subsequently optimized by the Vertex AI Reranker. For the generation component, the system is capable of integrating various LLMs through the LangChain framework. Given its deployment on GCP, Google's Gemini models are typically employed for response generation.
+The system is deployed on the Google Cloud Platform (GCP) \parencite{GoogleCloudDocumentation} and utilizes Vertex AI Search \parencite{GoogleVertexAISearch} for the initial document retrieval from its knowledge base. The relevance of the retrieved documents is subsequently optimized by the Vertex AI Reranker \parencite{GoogleReranker}. For the generation component, the system is capable of integrating various LLMs through the LangChain framework \parencite{LangChain}. Given its deployment on GCP, Google's Gemini models \parencite{GoogleGemini} are typically employed for response generation.
 
 A central architectural feature of the system is the implementation of distinct \textbf{Use Cases}. This allows the system to provide context-aware responses by augmenting the generation prompt with use-case-specific information, such as a specialized glossary or other supplementary data like a use-case-specific tonality. Each Use Case is associated with a specific selection of \textbf{Knowledge Assets}, which are custom compilations of \textbf{Knowledge Sources}. A Knowledge Source contains information on a particular topic and is technically linked to a Datastore in Vertex AI Search, which performs the underlying retrieval. The user requests are organized as follows: A user can start a thread within a use case. This thread can contain multiple chats that are linked to it. The user's requests are connected to a chat in turn. A use case and the data used in a use case is managed by a so called use case admin who is a trained employee of the company using the RAG system.
 
